<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="intent_key">C57D2EB9-C8D0-4315-916D-C05159E8EE23</string>
    <string name="app_name">Talkback Tutorial</string>
    <string name="lessons">Lessons</string>
    <string name="nl">\n</string>
    <string name="underscore">_</string>
    <string name="lesson_space">"Lesson "</string>
    <string name="finish_lesson">Finish Lesson</string>
    <string name="finish_lesson_button">Finish Lesson Button</string>
    <string name="continue_jump_text">Continue module</string>
    <string name="finish_module_button">Finish module</string>
    <string name="finish">Finish</string>
    <string name="row">Row</string>
    <string name="column1">Column1</string>
    <string name="column2">Column2</string>
    <string name="column3">Column3</string>
    <string name="a">a</string>
    <string name="hello">hello</string>
    <string name="repeat_instructions">repeat instructions</string>
    <string name="continue_str">Continue</string>
    <string name="continue_button">Continue</string>
    <string name="input">Input</string>
    <string name="android">android</string>
    <string name="forward_slash">/</string>
    <string name="menu_item">Menu Item</string>
    <string name="android_resource">android.resource://</string>
    <string name="empty_string">" "</string>
    <string name="back_button">Back</string>
    <string name="lesson_page_back_button">Go back to the main menu</string>
    <string name="lesson1_title">Getting Started</string>
    <string name="lesson2_title">Basic Menu Navigation</string>
    <string name="lesson2_desc">This lesson covers the basics of Android navigation using Talkback</string>
    <string name="lesson3_title">Controlling Reading</string>
    <string name="lesson3_desc">This lesson covers how to change the reading settings of Talkback</string>
    <string name="lesson4_title">Interacting with Media</string>
    <string name="lesson4_desc">This lesson covers the gestures and action needed to interact with media using Talkback</string>
    <string name="lesson5_title">Advanced Menu Navigation</string>
    <string name="lesson5_desc">This lesson covers how to navigate more complex Android menus using Talkback</string>
    <string name="lesson6_title">Typing Lesson</string>
    <string name="lesson6_desc">These cover the gestures and actions needed to use the virtual keyboard through Talkback</string>
    <string name="lesson7_title">External Apps</string>
    <string name="lesson7_desc">This lesson provides real world experience by having you jump to other applications through Talkback</string>
    <string name="challenge_outro">You have completed the challenge. Find and select the back button to return to the main menu.</string>
    <string name="aud">AUD</string>
    <string name="inspect_toy">inspectToy</string>
    <string name="tennis_ball">Tennis Ball</string>
    <string name="tennis_racquet">Tennis Racquet</string>
    <string name="lesson2_challenge_intro">Welcome to Lesson 2\'s challenge. In challenges, you\'ll be presented with practical scenarios to demonstrate your newly learnt skills. In this challenge, you\'ll be presented with a store and must add the tennis ball and the tennis racquet to your watchlist to complete the challenge. The tennis ball has a price of $5, and the tennis racquet has a price of $180. You may now start.</string>
    <string name="rating_content_description">Rating: %1$d stars</string>
    <string name="lesson3_challenge_intro">Welcome to Lesson 3\'s challenge. In this challenge you will be presented with a page containing baking recipes. To complete the challenge, navigate to the cookie recipe and check the checkbox for the ingredient … 1 egg</string>
    <string name="recipe_book_title">Baking Recipes</string>
    <string name="cookie_header">Cookies</string>
    <string name="cookie_img_desc">Picture of a cookie</string>
    <string name="cookie_description">This scrumptious and chewy chocolate-chip cookie recipe is guaranteed to satisfy your sweet tooth!</string>
    <string name="cookie_link"><a href="http://www.google.com">Get cookie recipe</a></string>
    <string name="brownie_header">Brownies</string>
    <string name="brownie_img_desc">Picture of a brownie</string>
    <string name="brownie_description">This gooey brownie recipe is a crowd pleaser and is so quick and easy to make!</string>
    <string name="brownie_link"><a href="http://www.google.com">Get brownie recipe</a></string>
    <string name="ingredients_heading">Ingredients</string>
    <string name="method_heading">Method</string>
    <string name="lesson3_challenge_outro">You have successfully completed Lesson 3\'s challenge. Sending you to the main menu.</string>
    <string name="cookie_recipe_title">Cookie Recipe</string>
    <string name="cookie_recipe_ingredient_1">½ cup of white sugar</string>
    <string name="cookie_recipe_ingredient_2">½ cup of brown sugar</string>
    <string name="cookie_recipe_ingredient_3">150 grams of softened butter</string>
    <string name="cookie_recipe_ingredient_4">1 teaspoon of vanilla extract</string>
    <string name="cookie_recipe_ingredient_5">1 and ¾ cups of plain flour</string>
    <string name="cookie_recipe_ingredient_6">1 egg</string>
    <string name="cookie_recipe_ingredient_7">1 cup of chocolate chips</string>
    <string name="cookie_recipe_method_1">Step 1: Preheat oven to 180C or 160C fan–forced. Line 2 baking trays with baking paper. Using an electric mixer or whisking by hand, beat butter and sugars, and 1–2 minutes or until smooth and well combined. Beat in egg and vanilla until combined.</string>
    <string name="cookie_recipe_method_2">Step 2: Stir in flour. Stir in chocolate chips. Roll 2 level tablespoonfuls of mixture into balls and place on prepared trays, 3cm apart. Press down slightly. Decorate with extra chocolate chips.</string>
    <string name="cookie_recipe_method_3">Step 3: Bake for 15–18 minutes or until light golden and cooked. Transfer to a wire rack to cool. Store in an airtight container for up to 1 week.</string>
    <string name="brownie_recipe_title">Brownie Recipe</string>
    <string name="brownie_recipe_ingredient_1">125 grams of unsalted butter</string>
    <string name="brownie_recipe_ingredient_2">125 grams of dark baking chocolate</string>
    <string name="brownie_recipe_ingredient_3">3 eggs, lightly whisked</string>
    <string name="brownie_recipe_ingredient_4">1 and ½ cups of white sugar</string>
    <string name="brownie_recipe_ingredient_5">¾ cups of plain flour</string>
    <string name="brownie_recipe_ingredient_6">¼ cup of Dutch cocoa powder</string>
    <string name="brownie_recipe_ingredient_7">1 teaspoon of vanilla extract</string>
    <string name="brownie_recipe_ingredient_8">Pinch of salt</string>
    <string name="brownie_recipe_method_1">Step 1: Preheat oven to 180C or 160C fan forced. Grease a 20cm square cake pan and line with baking paper. </string>
    <string name="brownie_recipe_method_2">Step 2: Place butter and chocolate in a heatproof bowl over a saucepan of simmering water (don\'t let the bowl touch the water). Stir with a metal spoon until melted. Remove from heat. Quickly stir in egg, sugar, flour, cocoa powder, vanilla and salt until just combined. Pour into prepared pan.</string>
    <string name="brownie_recipe_method_3">Step 3: Bake for 30 minutes or until a skewer inserted in the centre comes out with moist crumbs clinging. Set aside to cool completely.</string>
    <string name="lesson4_challenge_intro">In this challenge, you\'ll be presented an article with an embedded video already playing. To complete the challenge, pause the video, and return its slider to the beginning of the video, then replay it. You may now start.</string>
    <string name="lesson5_challenge_intro">Welcome to Lesson 5\'s challenge. In this challenge, you\'ll perform a sequence of tasks.</string>
    <string name="lesson5_challenge_fragment1_intro">First, go to the home screen and back to this app to receive your next task.</string>
    <string name="lesson5_challenge_fragment2_intro">Welcome back. Now a new message will be sent from Billy, open the notification to hear your next task.</string>
    <string name="lesson5_challenge_notification_title">Billy\'s message</string>
    <string name="lesson5_challenge_outro">Hello, It\'s Billy. Complete this challenge by interacting with this message in the notification panel.</string>
    <string name="lesson5_challenge_part2_backstack">lesson5ChallengePart2</string>
    <string name="lesson5_challenge_part2_notification_name">Talkback tutorial</string>
    <string name="adjust_reading_controls_part1_justification">There are reading and navigation modes. Reading modes help you read in a granular way, such as by words, paragraphs, or characters. Navigation modes help you move around more efficiently, such as by jumping from button to button.</string>
    <string name="adjust_reading_controls_part1_intro">This module covers how to adjust TalkBack\'s reading controls, which lets us make TalkBack read and navigate in different ways. When you change modes, TalkBack will speak the mode you have switched to.</string>
    <string name="adjust_reading_controls_part1_prompt">To change your mode, swipe up and down in one motion. Try to go through all of the options before moving on.</string>
    <string name="adjust_reading_controls_part1_backwards_prompt">You can go backwards through the list. Swipe down then up in one motion to go through the list in the opposite direction.</string>
    <string name="adjust_reading_controls_part1_multi_finger">Modes can also be switched by swiping with three fingers horizontally either to the left or to the right. Try going through the list with three finger swipes in both directions before moving on.</string>
    <string name="adjust_reading_controls_part1_finished_text">That\'s all there is to changing modes. The rest of this lesson covers how to use these modes. Activate the button below to finish this module.</string>
    <string name="article_video_content_description">Embedded Video</string>
    <string name="article_title">The Different Memory Storage Areas of the Brain</string>
    <string name="article_date">Saturday 15th July, 2042</string>
    <string name="article_author">Author: Billy Eggman</string>
    <string name="article_paragraph1">Within the cerebral cortex, the frontal and temporal lobes are heavily involved in explicit/declarative memory processes. Episodic memories tent to be stored in the frontal lobe (particularly the pre-frontal cortex) and temporal lobe. The same can be assumed with semantic memories. Components of our memories such as visuals and sounds are stored in areas throughout the cerebral cortex. Sound is sotred in the temporal lobe, while visuals in the occipital lobe.</string>
    <string name="article_paragraph2">The hippocampus (in temporal lobe) consolidates memories, turning short term memories into long term declarative memories; semantic and episodic. It also has roles in emotional memory due to its proximity to the amygdala, and spatial memory.</string>
    <string name="article_paragraph3">The amygdala (in temporal lobe) is involved in emotional memory, and links emotions and emotional responses (such as fear and aggression) to declarative memories. This helps us remember experiences by the emotion we felt during its formation. Also involved in the formation of procedural memories.</string>
    <string name="article_paragraph4">The cerebellum is involved in motor learning and the memory of conditioned reflexes. It\'s involved in implicit memory such as procedural memories that require movement. Also has a role in spatial navigation.</string>
    <string name="article_paragraph5">Finally, language is stored in Broca\'s area in the left frontal lobe, and memory for pictures are stored in the occipital lobe.</string>
</resources>