<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/brownie_recipe_title"
                android:text="@string/brownie_recipe_title"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textAlignment="center"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/brownie_image"
                android:layout_width="301dp"
                android:layout_height="207dp"
                android:layout_gravity="center"
                android:contentDescription="@string/brownie_img_desc"
                app:srcCompat="@drawable/brownie" />

            <TextView
                android:id="@+id/ingredients_heading"
                android:text="@string/ingredients_heading"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:visibility="visible" />

            <CheckBox android:id="@+id/checkbox_brownie_ingredient_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brownie_recipe_ingredient_1" />

            <CheckBox android:id="@+id/checkbox_brownie_ingredient_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brownie_recipe_ingredient_2" />

            <CheckBox android:id="@+id/checkbox_brownie_ingredient_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brownie_recipe_ingredient_3" />

            <CheckBox android:id="@+id/checkbox_brownie_ingredient_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brownie_recipe_ingredient_4" />

            <CheckBox android:id="@+id/checkbox_brownie_ingredient_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brownie_recipe_ingredient_5" />

            <CheckBox android:id="@+id/checkbox_brownie_ingredient_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brownie_recipe_ingredient_6" />

            <CheckBox android:id="@+id/checkbox_brownie_ingredient_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brownie_recipe_ingredient_7" />

            <CheckBox android:id="@+id/checkbox_brownie_ingredient_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brownie_recipe_ingredient_8" />

            <TextView
                android:id="@+id/method_heading"
                android:text="@string/method_heading"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/brownie_method_1"
                android:text="@string/brownie_recipe_method_1"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/brownie_method_2"
                android:text="@string/brownie_recipe_method_2"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/brownie_method_3"
                android:text="@string/brownie_recipe_method_3"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12sp"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>
</layout>