<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/horizontal_spacing">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/header_top_spacing"
                    android:text="@string/article_title"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/article_date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/article_author" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/header_bottom_spacing"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/article_paragraph1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/header_bottom_spacing"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/article_paragraph2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/header_bottom_spacing"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/article_paragraph3" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/header_bottom_spacing">

                    <com.github.talkbacktutorial.activities.modules.startstopmedia.CustomVideoView
                        android:id="@+id/article_video"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:contentDescription="@string/article_video_content_description" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/header_bottom_spacing"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/article_paragraph4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/header_bottom_spacing"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/article_paragraph5" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>